# mailetter

./: .env  .gitignore  Cargo.toml  Commands.md  Dockerfile  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-ba09b126ddbf3e1f15e1df7fd6576f9dfdd1347874ce318323267cc9704187c7.json
configuration/: base.yaml  production.yaml
migrations/: 20230705094820_make_status_not_null_in_subsriptions.sql  20230705133019_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
