[package]
name = "mailetter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mailetter"


[dependencies]
actix-web = "4"
tokio = "1.27"

[dev-dependencies]
reqwest = "0.11"