[package]
name = "mailetter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mailetter"


[dependencies]
actix-web = "4"
tokio = { version = "1.27", features = ["macros", "rt"]}
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde-aux = "4.2.0"
config = "0.13.3"
uuid = { version= "1.3.1", features=["v4"]}
chrono = "0.4.15"

# Emits logs / Equivalent of log crate
tracing = { version = "0.1", features = ["log"] }
# Consumes logs/ Equivalent of env_logger / Registry do not store log data but is tracking span data (relationships between them, which are active and which are close)
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
# Better formating of logs
tracing-bunyan-formatter = "0.3.6"
# Redirects logs to tracing subscriber (necessary to collect logs emited by actix)
tracing-log = "0.1"
# tracing equivalent of actix-web logger
tracing-actix-web = "0.7.4"
secrecy = { version = "0.8", features = ["serde"]}

unicode-segmentation = "1"
# email validation
validator = "0.16"

reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[dev-dependencies]
once_cell = "1"
# Better assert macros
claims = "0.7.1"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"